4.0/docs/building-blocks/ui-designer/ui-component-types/form-elements/text-area.mdx
---
title: Text area
description: A text area is a form element used to capture multi-line input from users in a conversational interface. The text area component is typically used for longer inputs such as descriptions, comments, or feedback, providing users with more space to type their responses. 
---

<Frame>
![Text area](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/post41/text_area41.png)
</Frame>

It is an important tool for creating intuitive and effective conversational interfaces that can collect and process large amounts of user input.

## Configuring the text area element

### Text area generic settings

These settings added in the Generic tab are available and they apply to all platforms including Web, iOS, and Android:

- [**Process data key**](#prcoess-data-key)
- [**Properties**](#properties)
- [**Datasource**](#datasource-configuration)
- [**Validators**](#validators)
- [**Expressions**](#expressions)
- [**UI actions**](#ui-actions)
- [**Text area styling**](#text-area-styling)

#### Prcoess data key
   
Process data key creates the binding between form element and process data, so it can be later used in [decisions](../../../node/exclusive-gateway-node), [business rules](../../../actions/business-rule-action/business-rule-action) or [integrations](../../../node/message-send-received-task-node#from-integration)

#### Properties

* **Label**: The visible label for the text area element.
* **Placeholder**: Text that appears within the text area when it is empty.
* **Has Clear**: Option to include a content clear mechanism.
* **Helpertext**: Additional information about the text area field (can be hidden inside an infopoint).
* **Update on Blur**: Update behavior triggered when the text area loses focus.

#### Datasource configuration

The default value for the element can be configured here, this will autofill the text field when you will run the process.

#### Validators

You can add multiple validators to a text area field. For more details, refer to [**Validators**](../../validators).

![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/building-blocks/ui-designer/text_area_props.png)

#### Hide/disable expressions

The text area's behavior can be defined using JavaScript expressions for hiding or disabling the element. The following properties can be configured for expressions:
   
* **Hide condition**: A JavaScript expression used to hide the text area when it is evaluated to your desired result. 
* **Disabled condition**: A JavaScript expression used to disable the text area when it returns a truthy value

<Frame>
![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/post41/hide_text_area.png)
</Frame>

<Info>
In the example above, we used a rule to hide a text area element if the value of the switch element above is false.
</Info>

#### Hide expression example

We will use the key defined on the switch element to create a JavaScript hide condition to hide the text area element:

<Frame>
![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/post41/hide_text_area1.png)
</Frame>

* Rule used:

```javascript
${application.client.hasHouse} === false
```

* Result:

<Frame>
![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/post41/text_area_result.gif)
</Frame>

#### Disable example

For example, you can use a disabled condition to disable a text area element based on what values you have on other elements.

<Frame>
![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/post41/disable_text_area1.png)
![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/post41/disable_text_area2.png)
</Frame>

When you choose a specific value on the radio element (Contact via SMS), the text area is disabled based on the disabled condition.

* Rule used:

```javascript
${application.client.contact} == "prfS"
```

<Info>
It's important to make sure that disabled fields have the same expression configured under the path expressions → hide.
</Info>


#### UI actions

UI actions can be added to the text area field to define its behavior and interactions.

* **Event**: Possible value - `CHANGE`.
* **Action Type**: Select the type of the action to be performed.

![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/building-blocks/ui-designer/text_area_props1.png)

<Tip>
For more details on how to configure a UI action, click [**here**](../../ui-actions).
</Tip>


### Text area settings overrides

There are instances where you may need to tailor settings configured in the **Generic** settings tab. This proves especially beneficial when you wish to adjust these settings to appear differently across various platforms such as Web, Android, or iOS.

Available override settings:

* Properties:
    * **Label**: Override the text area label.
    * **Helper**: Override helper text/info point.
    * **Placeholder**: Override the placeholder.
* Expressions:
    * **Hide**: Override the hide expression.

<Tip>
Overrides can always be imported/pushed from one platform to another:

![](https://s3.eu-west-1.amazonaws.com/docx.flowx.ai/release40/importing_pushing_overrides.gif)

</Tip>


### Text area styling

<Tabs>
<Tab title="Web">
<Tabs>
<Tab title="Sizing">

#### Fit W (fit width)

Adjusting the size of components is crucial for a responsive design. Fit W (width) offers three options:

* **fill**: Fills the available space.
* **fixed**: Maintains a fixed width.
* **auto**: Adjusts the width automatically based on content.

#### H Type (height type)

* **fixed**: Maintains a fixed height (pixels)
* **auto**: Adjusts the height automatically based on the content.

#### Rows 

* **Min Rows**: Sets the minimum number of rows.
* **Max Rows**: Sets the maximum number of rows.

</Tab>
</Tabs>
</Tab>
<Tab title ="iOS">

Similar styling considerations apply to iOS as for web. 

* **fixed height**: Measured in dp - density-independent pixels.

</Tab>
<Tab title ="Android">

Similar styling considerations apply to Android as for web.

* **fixed height**: Measured in pt - points.


</Tab>
</Tabs>

